# django-tutorials

./: .gitignore  pyproject.toml
tutorial_project/: settings.py
