[tool.poetry]
name = "django-tutorials"
version = "0.1.0"
description = ""
authors = ["Shimul Chowdhury <shimul@divine-it.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
